--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -35,6 +35,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        persist-credentials: false
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
